--- a/L1.CSS
+++ b/L1.CSS
@@ -270,6 +270,7 @@ body{
             .d11{
                 display: flex;
                 margin-left:100px;
+                width:880px;
                 margin-top:70px; 
             }
              .mobile{
